--- a/bsc-zoology-course.html
+++ b/bsc-zoology-course.html
@@ -2,94 +2,99 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>BSc Zoology Admission Eligibility Scope | Eduprov</title>
-  <meta name="description"
-    content="BSc Zoology course deals with animal science & its classifications. Get details of course, counseling, admission guidance, eligibility, colleges, career & scope">
-  <meta name="keywords" content=" ">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/bsc-zoology-course.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BSc Zoology Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/bsc-zoology-course.html"
+      },
+      "headline": "BSc Zoology Admission Guidance in Bangalore",
+      "description": "BSc Zoology course deals with animal science & its classifications. Get details of course, counseling, admission guidance, eligibility, colleges, career & scope",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-09",
+      "dateModified": "2021-08-09"
+    }
+    </script>
+  <meta name="description" content="BSc Zoology course deals with animal science & its classifications. Get details of course, counseling, admission guidance, eligibility, colleges, career & scope">
+  <meta name="keywords" content=" bsc zoology,zoology honours,bsc zoology subjects,courses after bsc zoology,zoology bsc 1st year,after bsc zoology,after bsc zoology which course is best,bsc zoology honours,bsc 1st year zoology,medical courses after bsc zoology,bsc hons zoology,bsc 2nd year zoology,zoology honours subject,bsc 3rd year zoology,bsc zoology course,bsc zoology admission,zoology admission,zoology subject in bsc,bsc zoology admission 2020,diploma courses after bsc zoology,bsc zoology subjects list,bsc zoology eligibility,professional courses after bsc zoology,bsc honours in zoology,zoology bsc 2nd year,du msc zoology cut off 2019,after bsc zoology medical courses,best course after bsc zoology,ignou bsc zoology admission 2020,bsc zoology course details,entrance exam after bsc zoology,bsc zoology hons,animal diversity bsc zoology,bsc zoology honours subjects,zoology in hindi bsc 1st year,bsc zoology fees,about bsc zoology,bsc zoology after courses,zoology honours in jadavpur university,options after bsc zoology,after completing bsc zoology,subjects in bsc zoology honours,bsc hons zoology subjects,bsc zoology online classes,eligibility for bsc zoology,honours in zoology,bsc zoology entrance exam,bsc zoology 1st year,after zoology honours,bsc zoology in ignou,zoology bsc 3rd year,zoology b sc,entrance exam for bsc zoology,zoology 3rd year,bsc part 1 zoology,opportunities after bsc zoology,bsc zoology course duration,bsc zoology 1st year subjects,bsc zoology and botany,bsc zoology in du,after bsc in zoology courses,jamb subject combination for zoology,netaji subhas open university msc zoology,bsc in botany and zoology,subjects in zoology honours,ignou bsc zoology honours,subjects for bsc zoology,bsc zoology details,bsc zoo,after zoology bsc,bsc with zoology,zoology in bsc,bsc botany and zoology,bsc zoology opportunities,msc zoology entrance,bsc part 1 zoology honours,bsc first year zoology,courses after bsc zoology honours,bsc 1st year zoology classes,amity university bsc zoology fees,zoology after 12th,subjects in bsc hons zoology,
+  
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="BSc Zoology Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/bsc-zoology-course.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="BSc Zoology course deals with animal science & its classifications. Get details of course, counseling, admission guidance, eligibility, colleges, career & scope" />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="BSc Zoology Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="BSc Zoology course deals with animal science & its classifications. Get details of course, counseling, admission guidance, eligibility, colleges, career & scope" />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
-
+<!--  -->
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>BSc Zoology </h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">BSc Zoology</h1>
       </div>
     </div>
   </div>
+ 
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
