--- a/btech-in-eee.html
+++ b/btech-in-eee.html
@@ -2,90 +2,84 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>B.Tech EEE Admission, Eligibility, Colleges, Career| Eduprov</title>
-  <meta name="description" content="B.Tech Electrical Electronics deals with study of electricity  electro magnetic application. Know the cut-off, admission, top colleges, exam, scope |EDUPROV">
-  <meta name="keywords"
-    content="B. Tech Electrical and Electronic Engineering , B. Tech Electrical and Electronic Engineering  admission, B. Tech Electrical and Electronic Engineering  salary, B. Tech Electrical and Electronic Engineering  jobs, B. Tech Electrical and Electronic Engineering  course, jobs for B. Tech Electrical and Electronic Engineering , courses for B. Tech Electrical and Electronic Engineering , EEEs for B. Tech Electrical and Electronic Engineering , B. Tech Electrical and Electronic Engineering  salary in india, colleges for B. Tech Electrical and Electronic Engineering , B. Tech Electrical and Electronic Engineering  subjects, B. Tech Electrical and Electronic Engineering  EEE admission, B. Tech Electrical and Electronic Engineering  colleges, B. Tech Electrical and Electronic Engineering  EEE, B. Tech Electrical and Electronic Engineering  bangalore admission, B. Tech Electrical and Electronic Engineering  by bangalore admission, B. Tech Electrical and Electronic Engineering  best colleges in india, B. Tech Electrical and Electronic Engineering  EEE, B. Tech Electrical and Electronic Engineering  colleges in india, scope for B. Tech Electrical and Electronic Engineering , B. Tech Electrical and Electronic Engineering  admission, B. Tech Electrical and Electronic Engineering  in bangalore, B. Tech Electrical and Electronic Engineering  scope, B. Tech Electrical and Electronic Engineering  diploma jobs, B. Tech Electrical and Electronic Engineering  bangalore, B. Tech Electrical and Electronic Engineering  bangalore, B. Tech Electrical and Electronic Engineering  by bangalore, B. Tech Electrical and Electronic Engineering  admission, project for B. Tech Electrical and Electronic Engineering , B. Tech Electrical and Electronic Engineering  in india,">
-    <meta name="author" content="thephotogenicbug">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-    <link rel="apple-touch-icon" href="/images/favicon.png">
-    <link rel="stylesheet" href="../blog.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/btech-in-eee.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>B.Tech EEE Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+  
+  </script>
+  <meta name="description" content="B.Tech Electrical and Electronic Engineering or Electrical and Electronic Engineering (EEE)
+  comprises the study of electricity and electrical circuits. This course is a modern course and is 
+  available since the 19th century">
+  <meta name="keywords" content=" b tech electrical engineering,b tech eee,b tech electrical engineering syllabus,b tech eee full form,b tech eee syllabus,b tech electrical engineering subjects,b tech eee subjects,eee in btech,subjects in eee engineering 1st year,electrical engineering syllabus b tech,electrical engineering btech syllabus,b tech eee 2nd year syllabus 2020,courses after btech eee,subjects in b tech electrical engineering,eee 2nd year syllabus,btech 2nd year eee subjects,eee subjects in btech,eee branch in btech,btech 3rd sem electrical engineering syllabus,after btech eee,b tech eee subjects list,b tech eee 3rd sem subjects,after b tech electrical engineering,syllabus b tech electrical engineering first year,b tech eee course details,b tech electrical engineering course,eee engineering 1st year syllabus,
+
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="B.Tech EEE Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/btech-in-eee.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="B.Tech Electrical and Electronic Engineering or Electrical and Electronic Engineering (EEE)
+    comprises the study of electricity and electrical circuits. This course is a modern course and is 
+    available since the 19th century" />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="B.Tech EEE Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="B.Tech Electrical and Electronic Engineering or Electrical and Electronic Engineering (EEE)
+    comprises the study of electricity and electrical circuits. This course is a modern course and is 
+    available since the 19th century" />
+  <meta name="twitter:image" content="" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+  <meta name="author" content="thephotogenicbug">
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
 </head>
 
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-  
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>B.Tech Electrical and Electronic Engineering (EEE) </h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">B.Tech EEE</h1>
       </div>
     </div>
   </div>
+
+  
   <div class="container mt-3">
     <div class="row">
         <div class="col-md-12">
@@ -117,7 +111,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h2 class="text-center text-primary" id="tag-font">
+            <h2 class="text-center text-dark" id="tag-font">
                     Eligibility 
             </h2>
         </div>
@@ -146,7 +140,7 @@
 
         <div class="row">
           <div class="col-md-12">
-              <h2 class="text-center text-primary" id="tag-font">
+              <h2 class="text-center text-dark" id="tag-font">
                     Scope
               </h2>
           </div>
