--- a/btech-in-instrumentation.html
+++ b/btech-in-instrumentation.html
@@ -2,108 +2,103 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>B.Tech Instrumentation Control Engineering Eligibility | Eduprov</title>
-  <meta name="description" content="Instrumentation Control Engineering deals with designing, developing, installation of equipment. To know eligibility, admission, colleges, scope visit EDUPROV">
-  <meta name="keywords"
-    content="instrumentation  engineering admission , instrumentation  engineering syllabus, 
-    instrumentation  engineer colleges, instrumentation  engineering colleges, colleges for 
-    instrumentation  engineering, colleges withinstrumentation  engineering, instrumentation  
-    engineer syllabus, instrumentation  engineering college, instrumentation  engineer salaries, 
-    college ofinstrumentation  engineering, institution ofinstrumentation  engineers, instrumentation 
-     engineer jobs, instrumentation  engineering institute, instrumentation  engineering jobs, 
-     instrumentation  engineering, instrumentation  engineering colleges, instrumentation  engineering, 
-     what isinstrumentation  engineering, colleges forinstrumentation  engineering, colleges with 
-     instrumentation  engineering, instrumentation  engineering, instrumentation  engineering jobs, 
-     job ininstrumentation  engineering, jobs forinstrumentation  engineers, jobs ininstrumentation  
-     engineering, instrumentation  engineer jobs, jobs withinstrumentation  engineering, instrumentation  
-     engineering subjects, instrumentation  engineering university, aviation engineer, b techinstrumentation 
-      engineering, instrumentation  engineering admission, instrumentation  engineering admission bangalore,
-       admission forinstrumentation  engineering, admission forinstrumentation  engineers, admission on 
-       instrumentation  engineering, instrumentation  engineering scope, how to become aninstrumentation 
-        engineer, scope ofinstrumentation  engineering, instrumentation  engineering meaning, instrumentation
-          engineering admission, jobs in instrumentation , instrumentation  engineering career, career in 
-          instrumentation  engineering, careers ininstrumentation  engineering, instrumentation  engineering career, instrumentation  engineer syllabus per month, averageinstrumentation  engineer syllabus, what isinstrumentation  engineering syllabus, instrumentation  engineering syllabus in us, instrumentation  admission, bestinstrumentation  engineering admission, instrumentation  engineer syllabus, instrumentation  engineer job syllabus, how much doinstrumentation  engineers earn, instrumentation  admission for beginners, instrumentation  engineering admission collection, instrumentation  engineering bangalore admissions,">
-          <meta name="author" content="thephotogenicbug">
-          <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-          <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-          <link rel="apple-touch-icon" href="/images/favicon.png">
-          <link rel="stylesheet" href="../blog.css" />
-          <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-          <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-          <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-          <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/btech-in-instrumentation.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>B.Tech Instrumentation Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/btech-in-genetic.html"
+      },
+      "headline": "B.Tech Instrumentation Admission Guidance in Bangalore",
+      "description": "Instrumentation Control Engineering is the course that deals with handling heavy equipment. 
+        The work here is to maintain the working function of the equipment system.",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-09",
+      "dateModified": "2021-08-09"
+    }
+    </script>
+  <meta name="description" content="Instrumentation Control Engineering is the course that deals with handling heavy equipment. 
+  The work here is to maintain the working function of the equipment system.">
+  <meta name="keywords" content=" 
+        instrumentation  engineering admission , instrumentation  engineering syllabus, instrumentation  engineer colleges, instrumentation  engineering colleges, colleges for instrumentation  engineering, colleges withinstrumentation  engineering, instrumentation  engineer syllabus, instrumentation  engineering college, instrumentation  engineer salaries, college ofinstrumentation  engineering, institution ofinstrumentation  engineers, instrumentation engineer jobs, instrumentation  engineering institute, instrumentation  engineering jobs, instrumentation  engineering, instrumentation  engineering colleges, instrumentation  engineering, what isinstrumentation  engineering, colleges forinstrumentation  engineering, colleges with instrumentation  engineering, instrumentation  engineering, instrumentation  engineering jobs, job ininstrumentation  engineering, jobs forinstrumentation  engineers, jobs ininstrumentation  engineering, instrumentation  engineer jobs, jobs withinstrumentation  engineering, instrumentation  engineering subjects, instrumentation  engineering university, aviation engineer, b techinstrumentation engineering, instrumentation  engineering admission, instrumentation  engineering admission bangalore,admission forinstrumentation  engineering, admission forinstrumentation  engineers, admission on instrumentation  engineering, instrumentation  engineering scope, how to become aninstrumentation engineer, scope ofinstrumentation  engineering, instrumentation  engineering meaning, instrumentationengineering admission, jobs in instrumentation , instrumentation  engineering career, career in instrumentation  engineering, careers ininstrumentation  engineering, instrumentation  engineering career, instrumentation  engineer syllabus per month, averageinstrumentation  engineer syllabus, what isinstrumentation  engineering syllabus, instrumentation  engineering syllabus in us, instrumentation  admission, bestinstrumentation  engineering admission, instrumentation  engineer syllabus, instrumentation  engineer job syllabus, how much doinstrumentation  engineers earn, instrumentation  admission for beginners, instrumentation  engineering admission collection, instrumentation  engineering bangalore admissions,
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="B.Tech Instrumentation Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/btech-in-instrumentation.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Instrumentation Control Engineering is the course that deals with handling heavy equipment. 
+    The work here is to maintain the working function of the equipment system." />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="B.Tech Instrumentation Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Instrumentation Control Engineering is the course that deals with handling heavy equipment. 
+    The work here is to maintain the working function of the equipment system." />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+  <meta name="author" content="thephotogenicbug">
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
-
+<!--  -->
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-            <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-            <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-  
- <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-      height: 350px;
-      padding:50px;
-      background-position: center center;
-      background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>B. Tech Instrumentation Control Engineering</h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">B.Tech Instrumentation</h1>
       </div>
     </div>
   </div>
+
   <div class="container mt-3">
     <div class="row">
         <div class="col-md-12 mt-2">
@@ -127,7 +122,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h2 class="text-center text-primary" id="tag-font">
+            <h2 class="text-center text-dark" id="tag-font">
               Eligibility 
             </h2>
         </div>
@@ -153,7 +148,7 @@
           
         <div class="row">
           <div class="col-md-12">
-              <h2 class="text-center text-primary" id="tag-font">
+              <h2 class="text-center text-dark" id="tag-font">
                 Scope
               </h2>
           </div>
